split the regression detection logic into a reusable code so that I can use it from Hudson.